2007-12-31  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* src/via_driver.c: (VIAPreInit), (VIAMapMMIO):

	Finally got a chance to work some more on libpciaccess.
	Memory detection is still not 100% proper but should be
	more functional and working at least.

2007-10-29  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* src/via_driver.c: (VIAPreInit):

	Redoing the second change of June 10:  Printing VideoRAM again
	only when it's actually been probed; plus further tiny code
	cleanups: comments, line wraps, whitespace.

2007-10-29  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* src/via_driver.c: (VIAPreInit):

	Redoing the first change of June 10:  Putting the chipset and
	revision print statements together at the beginning; moving
	the reading of the VideoRAM option to after X has parsed the
	config file; plus a few small layout tweaks.

2007-10-05  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_swov.c: (Upd_Video):

	Enable colorkey on secondary.

2007-10-03  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_driver.c: (VIAPreInit):

	Fix memory detection for P4M900 and CX700.

2007-09-12  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_bios.h:
	* src/via_driver.c: (VIAWriteMode), (VIAAdjustFrame),
	(VIASwitchMode):
	* src/via_mode.c: (ViaModeSecondaryVGAFetchCount),
	(ViaModeSecondaryVGAOffset), (ViaModeSecondaryVGA):
	* src/via_swov.c: (Upd_Video):
	* src/via_vbe.c: (ViaVbeSetPanelMode), (ViaVbeSetMode):

	Fix offset when using vbe modes on secondary.

2007-09-11  Xavier Bachelot  <xavier-at-bachelot-dot-org>

	* libxvmc/viaLowLevel.c: (initXvMCLowLevel):
	* libxvmc/viaLowLevel.h:
	* libxvmc/viaLowLevelPro.c: (initXvMCLowLevel):
	* src/via.h:
	* src/via_accel.c: (viaInitExa):
	* src/via_bandwidth.c: (ViaSetPrimaryFIFO):
	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit),
	(VIASave), (VIARestore), (VIALoadPalette):
	* src/via_driver.h:
	* src/via_id.c: